[gd_scene load_steps=19 format=3 uid="uid://bgnl3b3pqhfdb"]

[ext_resource type="Script" uid="uid://bx12634rbo328" path="res://src/Actor/Pickup/Experience.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dumy0wfvyxqrq" path="res://assets/Actor/Pickup/Experience.png" id="2"]

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(6, 6)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(10, 10)

[sub_resource type="Animation" id="3"]
resource_name = "MediumLeft"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 1), Vector2(0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("1")]
}

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(10, 10)

[sub_resource type="Animation" id="5"]
resource_name = "MediumPop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(4, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("4")]
}

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(10, 10)

[sub_resource type="Animation" id="7"]
resource_name = "MediumRight"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(3, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("6")]
}

[sub_resource type="Animation" id="9"]
resource_name = "SmallLeft"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("8")]
}

[sub_resource type="RectangleShape2D" id="10"]
size = Vector2(6, 6)

[sub_resource type="Animation" id="11"]
resource_name = "SmallPop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(4, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("10")]
}

[sub_resource type="Animation" id="12"]
resource_name = "SmallRight"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(3, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("8")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sx6wo"]
_data = {
&"MediumLeft": SubResource("3"),
&"MediumPop": SubResource("5"),
&"MediumRight": SubResource("7"),
&"SmallLeft": SubResource("9"),
&"SmallPop": SubResource("11"),
&"SmallRight": SubResource("12")
}

[sub_resource type="Animation" id="13"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="14"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2l5t1"]
_data = {
&"Flash": SubResource("13"),
&"Steady": SubResource("14")
}

[node name="Experience" type="CharacterBody2D" groups=["Actors", "Entities"]]
collision_layer = 0
collision_mask = 520
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("8")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
modulate = Color(0.360784, 0.901961, 0.172549, 0.639216)
shape = SubResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")
hframes = 5
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sx6wo")
}

[node name="FlashPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2l5t1")
}

[node name="DecayTimer" type="Timer" parent="."]

[node name="PopTimer" type="Timer" parent="."]

[connection signal="timeout" from="DecayTimer" to="." method="_on_DecayTimer_timeout"]
[connection signal="timeout" from="PopTimer" to="." method="_on_PopTimer_timeout"]
